Fix the mapping between tablet buttons on Windows

Now we convert the tablet button using the data configured by the
Wacom driver, which is updated on every WT_PROXIMITY event.

BUG:327332